Fixing market issues

--- a/css/main.css
+++ b/css/main.css
@@ -15,11 +15,15 @@ html {
 }
 
 .grains li {
+  display: block;
+  padding-bottom: 1em;
+  clear: both;
 
 }
 
 .grains img {
   width: 100px;
+  float: left;
 }
 
 .grains h2 {
